# source2content-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  main.py  models.py  pipeline.py  retrieval.py  storage.py
artifacts/sample_run/: article_draft.md  content_brief.md  slide_plan.json  source_registry.json  validation_report.json
data/sample_sources/: codexy_ok_note.md  image2slides_note.md  synquest_note.md
examples/: generate_sample.py
tests/: test_api.py  test_pipeline.py  test_retrieval.py
